<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="wallpaper_settings">Wallpaper Settings</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="order">Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="full_info">Peri is a simple wallpaper manager app.\nDeveloped by Hamza Rizwan.\n%1$s</string>
    <string name="close">Close</string>
    <string name="delete_message">You are deleting %1$s wallpapers, are you sure?</string>
    <string name="no_wallpaper_selected">No wallpaper selected</string>
    <string name="send_message">You are sending %1$s wallpapers, are you sure?</string>
    <string name="show_wallpaper_names_on_the_main_screen">Show wallpaper names on the main screen</string>
    <string name="enabled_wallpaper_names">Enable Wallpaper Names</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="grid_span_summary">Span count of the main screen grid.</string>
    <string name="grid_span">Grid Span</string>
    <string name="other_apps">Checkout My Other Projects</string>
    <string name="preparing">Preparing</string>
    <string name="copying">Copying wallpaper to system directory.</string>
    <string name="deleting">Deleting</string>
    <string name="delete_progress">%1$d/%2$d - %3$s</string>
    <string name="nomedia">NOMEDIA</string>
    <string name="nomedia_message">Current directory /%1$s is not nomedia and maybe visible in other gallery apps, would you like to hide the directory?</string>
    <string name="yes">Yes</string>
    <string name="nomedia_success">.nomedia file created successfully!\n\nWARNING: The files may still be visible to programs that ignores the .nomedia file.</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="blur_summary">Enable blur on the main screen.</string>
    <string name="blur">Blur</string>
    <string name="clear_cache_summary">Clear image cache</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="recreate_database">Recreate Database</string>
    <string name="recreate_database_summary">Recreate the image wallpaper database incase wrong data is shown.</string>
    <string name="recreate_database_message">This may take some time depending on the number of files. Are your sure?</string>
    <string name="edit">Edit</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="data">Data</string>
    <string name="enabled_wallpaper_details">Wallpaper Details</string>
    <string name="show_wallpaper_details_on_the_main_screen">Show wallpaper details on the main screen.</string>
    <string name="high_definition">HD Preview</string>
    <string name="error">Error</string>
    <string name="still_loading">Wallpapers are being refreshed, try again in a moment.</string>
    <string name="no_wallpaper_found">No wallpapers found, if the list hasn\'t been loaded yet then let the list load first or try changing the directory to where the wallpapers are stored.</string>
    <string name="change_directory">Change Directory</string>
    <string name="change_directory_desc">Change the current wallpaper\'s directory.\nChanging directory also recreates the wallpaper database.\n\n%1$s</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="both">Both</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="clear_cache_message">Cleared %1$s</string>
    <string name="initiate_recreate_database_message">Initiated database recreation process…</string>
    <string name="reload_metadata">Reload Metadata</string>
    <string name="failed_files">These files couldn\'t be loaded. Would you like to delete them?\n</string>
    <string name="security">Security</string>
    <string name="biometric_summary">Use biometric lock for private access to the app only.</string>
    <string name="enable_biometric">Biometric Lock</string>
    <string name="biometric_subtitle">Lock Peri to prevent unauthorized access.</string>
    <string name="biometric_success">Biometric authenticated successfully!</string>
    <string name="biometric_failed">Biometric authentication failed!</string>
    <string name="biometric_desc">Authorized access only</string>
    <string name="large">Large</string>
    <string name="normal">Normal</string>
    <string name="small">Small</string>
    <string name="extra_large">Extra Large</string>
    <string name="unknown">Unknown</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="library_stats">Library Stats</string>
    <string name="library_stats_desc">Details about your wallpaper library.</string>
    <string name="library_stats_message">Total Wallpapers: %1$d\nSize: %2$s\nCache: %3$s\nFitting Wallpapers: %4$d\nInsufficient Wallpapers: %5$d\nExcessive Wallpapers: %6$d</string>
    <string name="fetching">Fetching</string>
    <string name="cache_info">Fetching cache info</string>
    <string name="total_info">Counting total wallpapers</string>
    <string name="size_info">Calculating size</string>
    <string name="remember_scroll_position_summary">Remember the last scroll position of the main list.</string>
    <string name="remember_scroll_position">Remember Scroll Position</string>
    <string name="margin_between_wallpapers_summary">Add space between wallpapers in the list.</string>
    <string name="margin_between_wallpapers">Margin Between Wallpapers</string>
    <string name="main_screen_background_summary">Color mode of the background of the main screen.</string>
    <string name="main_screen_background">Main Screen Background</string>
    <string name="swipe_to_delete_summary">Allows to swipe delete a wallpaper from the list.</string>
    <string name="swipe_to_delete">Swipe to Delete</string>
    <string name="hue">Hue</string>
    <string name="scheduling">Scheduling</string>
    <string name="auto_wallpaper">Auto Wallpaper</string>
    <string name="auto_wallpaper_summary">Automatically change system and lock screen wallpapers over a specified period.</string>
    <string name="auto_wallpaper_warning">Would you like to turn off Auto Wallpaper before manually setting a wallpaper?</string>
    <string name="cancel">Cancel</string>
    <string name="crop_wallpaper_summary">Crop wallpaper to screen dimensions, disables wallpaper scroll.</string>
    <string name="crop_wallpaper">Crop Wallpaper</string>
    <string name="different_wallpaper_for_lock_screen">Separate Wallpaper For Lock Screen</string>
    <string name="different_wallpaper_for_home_screen">Separate Wallpaper For Home Screen</string>
    <string name="no">No</string>
    <string name="main_menu">Main Menu</string>
    <string name="back">Back</string>
    <string name="crop_wallpaper_warning">Would you like to use cropped wallpaper as visible on the screen?</string>
    <string name="next_wallpaper_desc">Skip to next wallpaper.</string>
    <string name="next_wallpaper">Next Wallpaper</string>
    <string name="change_wallpaper_when_sleeping">Change When Sleeping</string>
    <string name="auto_wallpaper_set_for">Set Wallpaper On</string>
    <string name="auto_wallpaper_set_for_summary">Set a screen for changing wallpaper automatically.</string>
    <string name="changing_wallpaper">Changing Wallpaper, Please Wait…</string>
    <string name="next_wallpaper_already_running">An instance is already running, please wait…</string>
    <string name="accessibility">Accessibility</string>
    <string name="reduce_motion">Reduce Motion</string>
    <string name="reduce_motion_summary">Disables some of the animations to reduce motion sickness.</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="dynamic">Dynamic</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="off" tools:ignore="PrivateResource">Off</string>
    <string name="every_minute">Every Minute</string>
    <string name="every_5_minutes">Every 5 Minutes</string>
    <string name="every_15_minutes">Every 15 Minutes</string>
    <string name="every_30_minutes">Every 30 Minutes</string>
    <string name="every_1_hour">Every 1 Hour</string>
    <string name="every_3_hours">Every 3 Hours</string>
    <string name="every_6_hours">Every 6 Hours</string>
    <string name="every_12_hours">Every 12 Hours</string>
    <string name="every_24_hours">Every 24 Hours</string>
    <string name="export">Export</string>
    <string name="exported">Exported</string>
    <string name="tweaks">Tweaks</string>
    <string name="tweaks_summary">Change some default behavior of the app to fit your needs.</string>
    <string name="ignore_dot_files">Ignore .dot files</string>
    <string name="ignore_subdirectories">Ignore subdirectories</string>
    <string name="linear_auto_wallpaper">Pick in Linear Order</string>
    <string name="copy">Copy</string>
    <string name="restart">Restart</string>
    <string name="permission_granted">Granted</string>
    <string name="permission_not_granted">Not Granted</string>
    <string name="permissions">Permissions</string>
    <string name="external_storage">Allow Files Access</string>
    <string name="external_storage_summary">Will be used to show the current system wallpaper in the home screen.</string>
    <string name="battery_optimization">Ignore Battery Optimization</string>
    <string name="battery_optimization_summary">Disable battery optimization to make sure Auto Wallpaper works properly.</string>
    <string name="current_wallpaper">Current Wallpaper</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="tags">Tags</string>
    <string name="setup">Setup</string>
    <string name="folder">Folders</string>
    <string name="select_folder">Select Folder</string>
    <string name="select_folder_summary">Select your primary wallpaper directory.</string>
    <string name="continue_button">Continue</string>
    <string name="setup_incomplete">Please complete the setup first.</string>
    <string name="interface_settings">Interface</string>
    <string name="warning_indicator_title">Hide Warning Indicator</string>
    <string name="warning_indicator_summary">Hide warning indicator for excessive wallpapers from the wallpaper list.</string>
    <string name="add_tag">Add Tag</string>
    <string name="remove_tag">Remove Tag</string>
    <string name="add">Add</string>
    <string name="tag_count">%1$d Wallpapers</string>
    <string name="image_shadow_title">Image Shadow</string>
    <string name="image_shadow_summary">Add a direct image based blurred shadow behind the wallpapers in wallpapers list.\n\nDisable it if you encounter performance issues.</string>
    <string name="github_summary">Open app\'s repository</string>
    <string name="tags_summary">Tags assigned on wallpapers will appear here.</string>
    <string name="sort_summary">Sorting style for wallpaper list.</string>
    <string name="order_summary">Ascending or descending order for the list.</string>
    <string name="duration">Duration</string>
    <string name="source">Source</string>
</resources>