<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:title=" " /> <!-- Empty title for status bar space -->

    <PreferenceCategory app:title="@string/about" />

    <Preference
        app:icon="@drawable/ic_info"
        app:key="info"
        app:summary="@string/full_info"
        app:title="" />

    <PreferenceCategory app:title="@string/home" />

    <CheckBoxPreference
        app:defaultValue="true"
        app:enabled="true"
        app:icon="@drawable/ic_label"
        app:iconSpaceReserved="true"
        app:key="is_name"
        app:summary="@string/show_wallpaper_names_on_the_main_screen"
        app:title="@string/enabled_wallpaper_names" />

    <ListPreference
        app:defaultValue="2"
        app:entries="@array/grid_span"
        app:entryValues="@array/grid_span_values"
        app:icon="@drawable/ic_grid"
        app:key="grid_span"
        app:summary="@string/grid_span_summary"
        app:title="@string/grid_span"
        app:useSimpleSummaryProvider="false" />

    <PreferenceCategory app:title="@string/other_apps" />

    <Preference
        app:key="positional"
        app:title="@string/positional" />

    <Preference
        app:key="inure"
        app:title="@string/inure_app_manager" />

</PreferenceScreen>
