<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturation"
        android:textColor="@color/textWhite" />

    <com.google.android.material.slider.Slider
        android:id="@+id/saturation_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:value="@dimen/default_saturation"
        android:valueFrom="@dimen/saturation_slider_min"
        android:valueTo="@dimen/saturation_slider_max"
        app:thumbColor="?attr/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brightness"
        android:textColor="@color/textWhite" />

    <com.google.android.material.slider.Slider
        android:id="@+id/brightness_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:value="@dimen/default_brightness"
        android:valueFrom="@dimen/brightness_slider_min"
        android:valueTo="@dimen/brightness_slider_max"
        app:thumbColor="?attr/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrast"
        android:textColor="@color/textWhite" />

    <com.google.android.material.slider.Slider
        android:id="@+id/contrast_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:value="@dimen/default_contrast"
        android:valueFrom="@dimen/contrast_slider_min"
        android:valueTo="@dimen/contrast_slider_max"
        app:thumbColor="?attr/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hue"
        android:textColor="@color/textWhite" />

    <com.google.android.material.slider.Slider
        android:id="@+id/hue_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:value="@dimen/default_hue"
        android:valueFrom="@dimen/hue_slider_min"
        android:valueTo="@dimen/hue_slider_max"
        app:thumbColor="?attr/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blur"
        android:textColor="@color/textWhite" />

    <com.google.android.material.slider.Slider
        android:id="@+id/blur_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:value="@dimen/default_blur"
        android:valueFrom="@dimen/blur_slider_min"
        android:valueTo="@dimen/blur_slider_max"
        app:thumbColor="?attr/colorPrimary" />

</LinearLayout>